--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <title>Memory Fish</title>
+    <link rel="stylesheet" media="all" href="/styles/normalize.css">
+    <link rel="stylesheet" media="all" href="/styles/main.css">
   </head>
-  <body>
+  <body style="text-align:center;">
     <div id="container"></div>
     <script src="build/bundle.js"></script>
   </body>
