Good chunk of styles.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Memory Fish</title>
-    <link rel="stylesheet" media="all" href="/styles/normalize.css">
-    <link rel="stylesheet" media="all" href="/styles/main.css">
+    <link rel="stylesheet" media="all" href="/build/main.css">
   </head>
   <body style="text-align:center;">
     <div id="container"></div>
-    <script src="build/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
